[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/modified/players.png" type="Texture" id=2]
[ext_resource path="res://src/default_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/arial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Audio Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/impact.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/reload.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/laser.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/bow.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/laser.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/pistol.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/empty.ogg" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 4 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edtPlayerName" type="TextEdit" parent="."]
margin_left = 190.515
margin_top = 39.2318
margin_right = 398.515
margin_bottom = 83.2322
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnJoin" type="Button" parent="."]
margin_left = 890.704
margin_top = 692.321
margin_right = 1012.7
margin_bottom = 730.321
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCreate" type="Button" parent="."]
margin_left = 883.804
margin_top = 217.0
margin_right = 980.804
margin_bottom = 255.0
custom_fonts/font = SubResource( 1 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 295.96, 193.741 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 3
hframes = 8

[node name="HSlider" type="HSlider" parent="."]
margin_left = 19.4169
margin_top = 202.227
margin_right = 124.86
margin_bottom = 218.227
max_value = 23.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edtServerName" type="TextEdit" parent="."]
margin_left = 626.993
margin_top = 217.308
margin_right = 869.993
margin_bottom = 257.308
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ItemList" type="ItemList" parent="."]
margin_left = 20.3371
margin_top = 371.43
margin_right = 1018.34
margin_bottom = 673.43
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 15.9887
margin_top = 42.6877
margin_right = 174.989
margin_bottom = 75.6877
custom_fonts/font = SubResource( 1 )
text = "Your Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 13.9861
margin_top = 144.803
margin_right = 180.986
margin_bottom = 177.803
custom_fonts/font = SubResource( 1 )
text = "Your Avatar:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 629.347
margin_top = 172.167
margin_right = 847.347
margin_bottom = 205.167
custom_fonts/font = SubResource( 1 )
text = "New Server Name:"

[node name="Label4" type="Label" parent="."]
margin_left = 24.6648
margin_top = 325.674
margin_right = 242.665
margin_bottom = 358.674
custom_fonts/font = SubResource( 1 )
text = "Active Servers:"

[node name="Audio Menu" parent="." instance=ExtResource( 5 )]
margin_left = 657.761
margin_top = 15.7139
margin_right = 1007.76
margin_bottom = 211.714

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="pressed" from="btnJoin" to="." method="_on_btnJoin_pressed"]
[connection signal="pressed" from="btnCreate" to="." method="_on_btnCreate_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
